syntax = "proto3";

service MozzarellaService {
  rpc createOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc fetchByUser(FetchByUserRequest) returns (FetchByUserResponse);
  rpc finishOrder(FinishOrderRequest) returns (FinishOrderResponse);
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  string name = 3;
  string description = 4;
  string createdAt = 5;
  string price = 6;
  bool finished = 7;
}

message Orders {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  string name = 1;
  string description = 2;
  int32 price = 3;
  string accessToken = 4;
}

message CreateOrderResponse {
  Order order = 1;
}

message FetchByUserRequest {
  string accessToken = 1;
}

message FetchByUserResponse {
  repeated Order orders = 1;
}

message FinishOrderRequest {
  string id = 1;
  string accessToken = 2;
}

message FinishOrderResponse {
  Order order = 1;
}